# covered

./: .gitignore  CHECKPOINT_1.md  PLAN.md
apps/: package-lock.json  package.json
apps/mobile/: App.tsx  app.json  package.json
apps/shared/: package.json  tamagui.config.ts  tsconfig.json
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
backend/: README.md  main.py  pyproject.toml  test_e2e.sh  vibe_voice_setup.sh
backend/covered/: config.py  main.py  worker_curation.py  worker_processing.py
backend/covered/api/: schemas.py
backend/covered/autogenerated_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
backend/covered/autogenerated_client/api/: __init__.py  default_api.py
backend/covered/autogenerated_client/models/: __init__.py  error.py  playback_content_schema.py  processed_input_schema.py  topic_list_schema.py  topic_schema.py
backend/covered/models/: data.py  database.py
backend/covered/tasks/: web_server.py
backend/covered/tasks/curation/: __init__.py  _email.py  _service.py
backend/covered/tasks/processing/: __init__.py  _playback.py  _script_ops.py
backend/covered/utils/: audio.py  gemini_tts.py  headless_browser.py  llm.py  queue.py  transcription.py  tts.py
backend/debug_scripts/: 1767301937_pre_polish.txt  1767301951_pre_tts.txt  1767302491_pre_polish.txt  1767302548_pre_tts.txt  1767302628_pre_polish.txt  1767302641_pre_tts.txt  1767303034_pre_polish.txt  1767303059_pre_tts.txt  1767357790_pre_polish.txt  1767357799_pre_tts.txt  1767357878_pre_polish.txt  1767357902_pre_tts.txt  1767359762_pre_polish.txt  1767359777_pre_tts.txt  1767361231_pre_polish.txt  1767361241_pre_tts.txt  1767361425_pre_polish.txt  1767361437_pre_tts.txt  1767373826_pre_polish.txt  1767373849_pre_tts.txt  1767373960_pre_polish.txt  1767373972_pre_tts.txt  1767374471_pre_polish.txt  1767374481_pre_tts.txt  1767384787_pre_polish.txt  1767384797_pre_tts.txt  1767384906_pre_polish.txt  1767384919_pre_tts.txt  1767385031_pre_polish.txt  1767385040_pre_tts.txt  1767385099_pre_polish.txt  1767385109_pre_tts.txt  1767385186_pre_polish.txt  1767385198_pre_tts.txt  1767385440_pre_polish.txt  1767385456_pre_tts.txt  1767385588_pre_polish.txt  1767385603_pre_tts.txt  1767385625_pre_polish.txt  1767385640_pre_tts.txt  (+193 more)
backend/models/: data.py
backend/resources/examples/draft_generation/: 01_ai_coding_agents.txt
backend/resources/examples/vibevoice_formatting/: 01_basic.txt  02_pauses.txt  03_numbers.txt
backend/scripts/: generate_clients.py
backend/services/: email.py  llm.py  script_writing.py  topic_service.py  tts.py
backend/services/script_writing/: __init__.py  _categorization.py  _handlers.py  _personality.py  _service.py
data/feed/: 1767062392_236b8ca7-451b-492b-9ec2-ad7d43be421a_000.m4a  1767062392_236b8ca7-451b-492b-9ec2-ad7d43be421a_001.m4a  1767062392_236b8ca7-451b-492b-9ec2-ad7d43be421a_002.m4a  1767062392_236b8ca7-451b-492b-9ec2-ad7d43be421a_003.m4a  1767062392_236b8ca7-451b-492b-9ec2-ad7d43be421a_004.m4a  1767062622_1164f431-38a0-4819-b6b6-9c8793e17bcc_000.m4a  1767062622_1164f431-38a0-4819-b6b6-9c8793e17bcc_001.m4a  (+112 more)
frontend/: next.config.ts  package-lock.json  package.json
reference-context/: README.md
(+68 files in other folders)
