[project]
name = "covered-backend"
version = "0.1.0"
description = "Backend for Covered radio agent"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "requests",
    "imap-tools",
    "openai",
    "numpy<2.0.0",
    "scipy",
    "pydantic",
    "accelerate==1.6.0",
    "transformers==4.51.3",
    "diffusers",
    "librosa",
    "ml-collections",
    "absl-py",
    "soundfile",
    "m3u8>=6.0.0",
    "beautifulsoup4>=4.14.3",
    "aiohttp",
    "aiohttp-cors",
    "markitdown",
    "playwright",
    "nemo-toolkit[asr]>=2.1.0",
    "ml-dtypes==0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch" },
]
torchaudio = [
  { index = "pytorch" },
]
