[project]
name = "covered-backend"
version = "0.1.0"
description = "Backend for Covered radio agent"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "requests",
    "imap-tools",
    "pydantic",
    "beautifulsoup4>=4.14.3",
    "markitdown",
    "playwright",
    "nemo-toolkit[asr]>=2.1.0",
    "flask>=3.1.2",
    "flask-rebar>=3.3.2",
    "marshmallow>=3.26.2",
    "flask-cors>=6.0.2",
]

[project.scripts]
covered-server = "covered.main:main"
curator-worker = "covered.worker_curation:main"
processing-worker = "covered.worker_processing:main"

[tool.uv]
package = true
dev-dependencies = [
    "pytest",
    "ruff",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch" },
]
torchaudio = [
  { index = "pytorch" },
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["covered"]
